// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test radio component render a radio component 1`] = `
<Radio
  choices={
    Array [
      Array [
        "1",
        "one",
      ],
      Array [
        "2",
        "two",
      ],
    ]
  }
  helperProps={Object {}}
  label="test label"
  name="test name"
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "test name",
          "1",
        ],
        Array [
          "test name",
          "2",
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  required={false}
  value="1"
>
  <div
    className="form__group "
  >
    <label
      className="form__question form__question--choice_field radio_select"
      htmlFor="test name"
      required=""
    >
      <span>
        test label
      </span>
    </label>
    <HelperComponent />
    <div
      className="form__item"
    >
      <ul
        className="grid grid--no-margin grid--two"
      >
        <li
          className="form__item"
          key="0"
          onClick={[Function]}
        >
          <input
            checked="checked"
            name="test name"
            onChange={[Function]}
            type="radio"
            value="1"
          />
          <label
            className="form__label"
            htmlFor="test name-0"
          >
            one
          </label>
        </li>
        <li
          className="form__item"
          key="1"
          onClick={[Function]}
        >
          <input
            checked=""
            name="test name"
            onChange={[Function]}
            type="radio"
            value="2"
          />
          <label
            className="form__label"
            htmlFor="test name-1"
          >
            two
          </label>
        </li>
      </ul>
    </div>
  </div>
</Radio>
`;

exports[`Test radio component with required & empty choices render a radio component with required & empty choices 1`] = `
<Radio
  choices={Array []}
  helperProps={Object {}}
  label="test label"
  name="test name"
  onChange={[MockFunction]}
  required={true}
  value="1"
>
  <div
    className="form__group "
  >
    <label
      className="form__question form__question--choice_field radio_select"
      htmlFor="test name"
      required=""
    >
      <span>
        test label
      </span>
      <span
        className="form__required"
      >
         *
      </span>
    </label>
    <HelperComponent />
    <div
      className="form__item"
    >
      <ul
        className="grid grid--no-margin grid--two"
      />
    </div>
  </div>
</Radio>
`;
